--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GoRoute</string>
+    <string name="mapbox_access_token">sk.eyJ1IjoibnVybGliYXkiLCJhIjoiY2xlenRucHJlMDJsNTN4cHBzeDR4dzl5cCJ9.u10bkqv7rs5NlyfgE8N-jg</string>
 </resources>
